deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gofly-front-end-service
spec:
  selector:
    app: gofly-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
